--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,44 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.buttonColor{
+    color: "rgb(122, 167, 199)" !important;
+    background-color: "rgb(225, 236, 244)";
+  }
+
+
+
+  .dot{
+      font-size: 5px;
+     border-radius: 50%; 
+     padding: 0 3px;
+     background-color: burlywood;
+     margin-right: 3px;
+  }
+  .dot2{
+    font-size: 5px;
+    border-radius: 50%; 
+    padding: 0 3px;
+    background-color: gold;
+    margin-right: 3px;
+  }
+  .tag-image{
+    display: flex;
+    
+  }
+  .right{
+    width: 100%;
+  }
+  .left > p {
+    font-size: small;
+  }
+  .pagination{
+    display: flex;
+    justify-content: end;
+  }
+  .question-p-tag{
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+  }
+ 
